--- a/app/src/main/res/layout/fragment_detail_pelanggan.xml
+++ b/app/src/main/res/layout/fragment_detail_pelanggan.xml
@@ -101,6 +101,8 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins"
                         android:gravity="end"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:layout_gravity="center_vertical"
                         android:textColor="@color/black"
                         tools:text="john.doe"
@@ -127,6 +129,8 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins"
                         android:gravity="end"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:layout_gravity="center_vertical"
                         tools:text="3313901923091"
                         android:textColor="@color/black"
@@ -153,6 +157,8 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins"
                         android:gravity="end"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:layout_gravity="center_vertical"
                         tools:text="081227157854"
                         android:textColor="@color/black"
@@ -179,6 +185,8 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins"
                         android:gravity="end"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:layout_gravity="center_vertical"
                         tools:text="Laki-Laki"
                         android:textColor="@color/black"
@@ -205,6 +213,8 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins"
                         android:gravity="end"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:layout_gravity="center_vertical"
                         tools:text="Jawa Tengah"
                         android:textColor="@color/abu"
@@ -231,6 +241,8 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins"
                         android:gravity="end"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:layout_gravity="center_vertical"
                         tools:text="Kota Semarang"
                         android:textColor="@color/abu"
@@ -257,6 +269,8 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins"
                         android:gravity="end"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:layout_gravity="center_vertical"
                         tools:text="Jalan Depok Sari Raya Semarang"
                         android:textColor="@color/abu"
@@ -282,6 +296,8 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins"
                         android:gravity="end"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:layout_gravity="center_vertical"
                         tools:text="50196"
                         android:textColor="@color/abu"
