--- a/app/src/main/res/layout/item_rv_riwayat_pemakaian.xml
+++ b/app/src/main/res/layout/item_rv_riwayat_pemakaian.xml
@@ -25,6 +25,7 @@
             android:layout_weight="0.75"
             android:fontFamily="@font/poppins_medium"
             android:gravity="start"
+            android:textSize="13sp"
             tools:text="Januari 2022"
             android:textColor="@color/hitam" />
 
@@ -36,6 +37,7 @@
             android:fontFamily="@font/poppins_medium"
             android:gravity="start"
             tools:text="900"
+            android:textSize="13sp"
             android:textColor="@color/hitam" />
 
         <TextView
@@ -46,6 +48,7 @@
             android:fontFamily="@font/poppins_medium"
             android:gravity="start"
             tools:text="932"
+            android:textSize="13sp"
             android:textColor="@color/hitam" />
     </TableRow>
 
